# quantum

./: README.md  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/mdns/: mod.rs
src-tauri/src/tcp/: mod.rs
src/components/: ConnectManually.tsx  GetText.tsx  Home.tsx  Model.tsx  Nav.tsx  Preview.tsx  Receive.tsx  SelectFiles.tsx  Send.tsx  SenderAtom.tsx
src/context/: context.tsx
